--- a/locales/ja.json
+++ b/locales/ja.json
@@ -98,5 +98,7 @@
 			"Image": "画像"
 		}
 	},
+	"None": "なし",
+	"Random": "ランダム",
 	"PresetVersionWarn": "このプリセットはお使いのGlitch Studioのバージョン({current})よりも新しいバージョン({newer})で作られているためインポートできません。\nこのプリセットをインポートするには、お使いのGlitch Studioを最新バージョンに更新してください。"
 }
