--- a/locales/en.json
+++ b/locales/en.json
@@ -98,5 +98,7 @@
 			"Image": "Image"
 		}
 	},
+	"None": "None",
+	"Random": "Random",
 	"PresetVersionWarn": "This preset cannot be imported because it was created with a newer version ({newer}) than your Glitch Studio version ({current}).\nTo import this preset, please update Glitch Studio to the latest version."
 }
